--- a/src/components/Navbar/Nav.module.css
+++ b/src/components/Navbar/Nav.module.css
@@ -1,15 +1,14 @@
-
 .nav{
 	grid-area: n;
 	background-color: red ;
-
+	padding: 20px;
 }
 
-.item{
+.item a{
 	color: white;
 	text-decoration: none;
 }
 
-.item.active{
+.item a.activeLink{
 	color: gold;
 }
