--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -15,6 +15,10 @@ padding: 10px;
 padding: 10px;
 }
 
-.message{
-
+.message img{
+width: 70px;
+height: 70px;
+border: 1px solid grey;
+border-radius: 50%;
+margin: 6px;
 }
