--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,13 @@
 
 .header{
 	grid-area: h;
-	background-color: green;
+	width: 100%;
+	background: linear-gradient(180deg, #052065, #042062);
 }
 
 .header img{
-	width: 30px;
+	width: 50px;
+	margin: 13px;
+	margin-left: 20px;
+	border-radius: 40%;
 }
