--- a/src/components/Profile/Stories/Stories.module.css
+++ b/src/components/Profile/Stories/Stories.module.css
@@ -1,7 +1,7 @@
 
 .content{
-height: 25%;
-background-color: black ;
+height: 20%;
+background-color: unset; ;
 display: flex;
 }
 
@@ -10,6 +10,6 @@ width: 70px;
 height: 70px;
 border: 1px solid grey;
 border-radius: 50%;
-margin: 5px;
+margin: 6px;
 }
 
