--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -7,12 +7,18 @@ grid-template-columns: 2fr 10fr;
 padding: 10px;
 }
 
+.dialogsItems a {
+text-decoration: none;
+color: #46acc6;
+	}
+
 .dialogsItems .active{
 	color: gold;
 }
 
 .messages{
 padding: 10px;
+color: aliceblue;
 }
 
 .message img{
