--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,5 +1,7 @@
-.myPost{
+.item{
 padding: 10px;
+color: white;
+
 }
 
 .postButton{
@@ -17,4 +19,11 @@ padding: 10px;
 
 }
 
-
+	.item img{
+	width: 70px;
+	height: 70px;
+	border: 1px solid grey;
+	border-radius: 50%;
+	margin: 5px;
+	}
+	
